more debug output, version update